--- a/register.html
+++ b/register.html
@@ -47,11 +47,11 @@
             <form action="" method="POST">
                 <h1>Inscription</h1>
                 <div class="input-box">
-                    <input type="text" name="pseudo" placeholder="Pseudo" required value="Pseudo">
+                    <input type="text" name="pseudo" placeholder="Pseudo" required>
                     <i class='bx bxs-user'></i> 
                 </div>
                 <div class="input-box">
-                    <input type="email" name="email" placeholder="Email" required value="Email">
+                    <input type="email" name="email" placeholder="Email" required>
                     <i class='bx bx-envelope'></i>
                 </div>
                 <div class="input-box">
